Fri Jul 20 16:13:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Corrected CommandlinePassage, one perl script wasn't used, other
          was called twice

Fri Jul 20 07:47:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
          Set datareader to nil

Thu Jun 28 08:08:12 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/Sender/QCTQM_Test_Sender.idl:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/Sender/QCTQM_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/Sender/QCTQM_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/descriptors/Plan.cdp:
          Start the writing of samples upon a publication matched event.

        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/descriptors/run_test.pl:
          Optimized logging.

Thu Jun 28 07:58:38 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/TwoQueries/Sender/QCTQ_Test_Sender.idl:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueries/Sender/QCTQ_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueries/Sender/QCTQ_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueries/descriptors/Plan.cdp:
          Start the writing of samples upon a publication matched event.

        * connectors/dds4ccm/tests/QueryCondition/TwoQueries/descriptors/run_test.pl:
          Extended sleeping time.

Thu Jun 28 07:04:33 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/EventListener/Sender/QCLE_Test_Sender.idl:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Sender/QCLE_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Sender/QCLE_Test_Sender_exec.cpp: